[tool.poetry]
name = "repl_python3_RPG-Class-Hand-In-version"
version = "0.1.0"
description = ""
authors = ["humzahmalik07 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
actions = "^1.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
